Switch to ConvNeXt and fix GACRC training.

--- a/conf/base/parameters/model_data_load.yml
+++ b/conf/base/parameters/model_data_load.yml
@@ -14,9 +14,9 @@ min_saturation: 0.9
 # Maximum saturation factor to use.
 max_saturation: 1.1
 # Whether to allow random flipping.
-flip: false
+flip: true
 # Number of batches to buffer when shuffling.
-shuffle_buffer_size: 5
+shuffle_buffer_size: 3
 
 # Probability of dropping a particular example to use.
 drop_probability: 0.75
