Try with ConvNeXtBase model.
This is the next size up.

--- a/conf/a100/parameters/training.yml
+++ b/conf/a100/parameters/training.yml
@@ -4,3 +4,10 @@ batch_size: 32
 rot_net_batch_size: 8
 # Batch size to use for training colorization.
 colorization_batch_size: 16
+
+# Learning phases to use for training the model.
+learning_phases:
+  # The initial learning rate to use for the phase.
+  - learning_rate:
+      # Initial learning rate value.
+      initial: 0.002
