Fix video generation code.
Hopefully. I haven't actually tried this yet.

--- a/conf/base/pipelines/model_evaluation/catalog.yml
+++ b/conf/base/pipelines/model_evaluation/catalog.yml
@@ -1,3 +1,14 @@
+# Raw tracks.
+testing_tracks:
+  type: yaml.YAMLDataSet
+  filepath: data/07_model_output/testing_tracks.yml
+  versioned: True
+
+validation_tracks:
+  type: yaml.YAMLDataSet
+  filepath: data/07_model_output/validation_tracks.yml
+  versioned: True
+
 # Reports on counting accuracy.
 count_report_test:
   type: yaml.YAMLDataSet
