Finally get it to produce correct videos.
I had to fix some more issues that stemmed from confusion between
absolute and relative coordinates.

--- a/conf/base/pipelines/model_evaluation/catalog.yml
+++ b/conf/base/pipelines/model_evaluation/catalog.yml
@@ -27,6 +27,7 @@ tracking_videos_test:
   filepath: ${output_data_dir}/08_reporting/tracking_videos/test
   extension: .mp4
   bgr_color: false
+  resolution: [960, 540]
   versioned: True
 
 tracking_videos_valid:
@@ -35,4 +36,5 @@ tracking_videos_valid:
   filepath: ${output_data_dir}/08_reporting/tracking_videos/valid
   extension: .mp4
   bgr_color: false
+  resolution: [960, 540]
   versioned: True
