--- a/conf/base/pipelines/model_evaluation/catalog.yml
+++ b/conf/base/pipelines/model_evaluation/catalog.yml
@@ -1,3 +1,8 @@
+# Model used for inference.
+inference_model:
+  type: MemoryDataSet
+  copy_mode: assign
+
 # Raw tracks.
 testing_tracks:
   type: yaml.YAMLDataSet
