--- a/conf/base/catalog.yml
+++ b/conf/base/catalog.yml
@@ -119,9 +119,14 @@ encoder_model:
   type: MemoryDataSet
   copy_mode: assign
 
-# Saved model, produced at the end of training.
-trained_model:
-  filepath: ${output_data_dir}/06_models/fully_trained.hd5
+# Saved model from the best epoch.
+best_model:
+  filepath: ${output_data_dir}/06_models/best.hd5
+  << : *model_args
+
+# Saved model from the final epoch.
+last_model:
+  filepath: ${output_data_dir}/06_models/last.hd5
   << : *model_args
 
 # Saved model, produced at the end of RotNet pre-training.
