--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ python-json-logger = "^2.0.4"
 setuptools = "^65.7.0"
 torch = "^1.13.1"
 torchvision = "^0.14.1"
+methodtools = "^0.4.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
