--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,14 +14,13 @@ seaborn = "^0.11.1"
 matplotlib = "^3.3.4"
 pydantic = "^1.8.1"
 scipy = "^1.6.2"
-opencv-python = "4.5.2.54"
 numpy = "1.22"
 opencv-contrib-python = "4.5.2.54"
 tqdm = "^4.64.0"
 python-json-logger = "^2.0.4"
 setuptools = "^65.7.0"
-torch = "^1.13.1"
-torchvision = "^0.14.1"
+torch = "1.13"
+torchvision = "0.14"
 methodtools = "^0.4.5"
 
 [tool.poetry.dev-dependencies]
