--- a/conf/base/parameters/train_simclr.yml
+++ b/conf/base/parameters/train_simclr.yml
@@ -7,3 +7,6 @@ num_epochs: 100
 batch_size: 1024
 # Learning rate to use for training.
 learning_rate: 0.001
+
+# Entity to use for WandB. Should be your username or team name.
+wandb_entity: djpetti
