--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ setuptools = "^65.7.0"
 torch = "1.13"
 torchvision = "0.14"
 methodtools = "^0.4.5"
+wandb = "^0.13.9"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
