--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ torch = "1.13"
 torchvision = "0.14"
 methodtools = "^0.4.5"
 wandb = "^0.13.9"
+torchmetrics = "^0.11.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
