--- a/conf/base/parameters/train_simclr.yml
+++ b/conf/base/parameters/train_simclr.yml
@@ -5,6 +5,8 @@ mars_image_folder: data/05_model_input/mars_multi_camera
 num_epochs: 100
 # Learning rate to use for training.
 learning_rate: 0.001
+# Temperature parameter to use for the loss.
+temperature: 0.1
 
 # Entity to use for WandB. Should be your username or team name.
 wandb_entity: djpetti
