--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,6 @@ matplotlib = "^3.3.4"
 pydantic = "^1.8.1"
 scipy = "^1.6.2"
 numpy = "1.22"
-opencv-contrib-python = "4.5.2.54"
 tqdm = "^4.64.0"
 python-json-logger = "^2.0.4"
 setuptools = "^65.7.0"
@@ -24,6 +23,8 @@ torchvision = "0.14"
 methodtools = "^0.4.5"
 wandb = "^0.13.9"
 torchmetrics = "^0.11.0"
+yolov5 = "^7.0.7"
+opencv-python-headless = "^4.7.0.68"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
