--- a/conf/base/parameters/train_simclr.yml
+++ b/conf/base/parameters/train_simclr.yml
@@ -2,11 +2,8 @@
 mars_image_folder: data/05_model_input/mars_multi_camera
 
 # Number of epochs to train for.
-num_epochs: 100
+simclr_num_epochs: 100
 # Learning rate to use for training.
-learning_rate: 0.001
+simclr_learning_rate: 0.001
 # Temperature parameter to use for the loss.
-temperature: 0.1
-
-# Entity to use for WandB. Should be your username or team name.
-wandb_entity: djpetti
+simclr_temperature: 0.1
