--- a/conf/a100/parameters/training.yml
+++ b/conf/a100/parameters/training.yml
@@ -1,5 +1,7 @@
-# Batch size to use for training.
+# Batch size to use for self-supervised training.
 batch_size: 512
+# Batch size to use for semi-supervised validation.
+super_batch_size: 64
 # Batch size to use for training RotNet
 rot_net_batch_size: 8
 # Batch size to use for training colorization.
