--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ wandb = "^0.13.9"
 torchmetrics = "^0.11.0"
 yolov5 = "^7.0.7"
 opencv-python-headless = "^4.7.0.68"
+pytorch-warmup = "^0.1.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
