Support periodic validation.
This gives us a slightly better idea of how we're performing.

--- a/conf/base/catalog.yml
+++ b/conf/base/catalog.yml
@@ -28,3 +28,8 @@ trained_model:
 training_data:
   type: MemoryDataSet
   copy_mode: assign
+
+# Testing dataset.
+testing_data:
+  type: MemoryDataSet
+  copy_mode: assign
