Get temporal order verification to at least train.

--- a/conf/base/catalog.yml
+++ b/conf/base/catalog.yml
@@ -26,7 +26,7 @@ initial_model:
 
 # Trained model
 trained_model:
-#  versioned: True
+  versioned: True
   type: self_supervised.data_sets.PytorchModelDataSet
   filepath: ${output_data_dir}/06_models/last.pt
 
