--- a/conf/base/parameters/train_temporal.yml
+++ b/conf/base/parameters/train_temporal.yml
@@ -1,5 +1,9 @@
-# This is a boilerplate parameters config generated for pipeline 'train_temporal'
-# using Kedro 0.18.4.
-#
-# Documentation for this file format can be found in "Parameters"
-# Link: https://kedro.readthedocs.io/en/0.18.4/kedro_project_setup/configuration.html#parameters
+# The margin to use for the triplet loss.
+margin: 1.0
+# The regularization factor to use for the loss.
+regularization: 0.1
+
+# Time range for picking positive frames, in seconds away from the anchor.
+positive_time_range: [0.1, 0.5]
+# Time range for picking negative frames, in seconds away from the anchor.
+negative_time_range: [2.0, 3.0]
