Support including realsense data in the dataset.

--- a/conf/base/catalog.yml
+++ b/conf/base/catalog.yml
@@ -1,7 +1,11 @@
 # Specification for the raw MARS dataset.
-mars_dataset_spec:
+mars_flower_dataset_spec:
   type: yaml.YAMLDataSet
-  filepath: data/01_raw/mars_dataset.yml
+  filepath: data/01_raw/mars_dataset_flower.yml
+
+mars_flower_dataset_rs_spec:
+  type: yaml.YAMLDataSet
+  filepath: data/01_raw/mars_dataset_flower_realsense.yml
 
 # Metadata associated with the MARS dataset.
 mars_dataset_meta:
