--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ methodtools = "^0.4.5"
 wandb = "^0.13.9"
 torchmetrics = "^0.11.0"
 yolov5 = "^7.0.8"
+scikit-learn = "^1.2.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
