Revert back to training models from scratch.

--- a/conf/base/catalog.yml
+++ b/conf/base/catalog.yml
@@ -25,11 +25,8 @@ yolov5_l_description:
 
 # Initial, untrained model
 initial_model:
-  #type: MemoryDataSet
-  #copy_mode: assign
-  versioned: True
-  type: self_supervised.extras.datasets.PytorchModelDataSet
-  filepath: data/06_models/initial.pt
+  type: MemoryDataSet
+  copy_mode: assign
 
 # Trained model
 trained_model:
