Add dataset for some 2020 GPhenoVision data.
Also fix the memory leak when building the dataset.

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ conf/**/*credentials*
 data/*
 !data/01_raw/
 data/01_raw/*
-!data/01_raw/mars_dataset*.yml
+!data/01_raw/*dataset*.yml
 !data/01_raw/yolov5*.yml
 
 logs/**
