--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Daniel Petti <djpetti@gmail.com>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "~3.9"
+python = "~3.10"
 kedro = {extras = ["matplotlib", "pandas"], version = "^0.18.1"}
 pandas = "1.5"
 loguru = "^0.5.3"
@@ -15,12 +15,12 @@ matplotlib = "^3.3.4"
 pydantic = "^1.8.1"
 scipy = "^1.6.2"
 numpy = "1.22"
-opencv-contrib-python = "4.5.2.54"
+opencv-contrib-python = "^4.5"
 tqdm = "^4.64.0"
 python-json-logger = "^2.0.4"
 setuptools = "^65.7.0"
-torch = "1.13"
-torchvision = "0.14"
+torch = "^1.13.1"
+torchvision = "^0.14.1"
 methodtools = "^0.4.5"
 wandb = "^0.13.9"
 torchmetrics = "^0.11.0"
