--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ wandb = "^0.13.9"
 torchmetrics = "^0.11.0"
 yolov5 = "^7.0.8"
 scikit-learn = "^1.2.1"
+segment-anything = {git = "https://github.com/facebookresearch/segment-anything.git"}
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
