Get selection of files based on image reps working.
The selection code is kind of slow right now and could possibly be optimized
by storing more than one rep in a partition.

--- a/conf/base/catalog.yml
+++ b/conf/base/catalog.yml
@@ -55,3 +55,9 @@ mars_image_reps:
   dataset:
     type: pandas.FeatherDataSet
   filename_suffix: ".feather"
+
+# Optimal image selection ordering to use for active learning.
+image_order:
+  type: yaml.YAMLDataSet
+  filepath: data/08_reporting/image_order.yml
+  versioned: True
