--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,6 @@ torchvision = "^0.14.1"
 methodtools = "^0.4.5"
 wandb = "^0.13.9"
 torchmetrics = "^0.11.0"
-yolov5 = "^7.0.8"
 scikit-learn = "^1.2.1"
 segment-anything = {git = "https://github.com/facebookresearch/segment-anything.git"}
 
@@ -38,10 +37,26 @@ pre-commit = "^2.11.0"
 pytest-snapshot = "^0.5.0"
 Faker = "^6.6.2"
 pytest-coverage = "^0.0"
-PyYAML = "^5.4.1"
 pytest-flake8 = "^1.0.7"
 pydot = "^1.4.2"
 jupyterlab = "^3.4.2"
+
+[tool.poetry.group.video.dependencies]
+yacs = "^0.1.8"
+av = "^11.0.0"
+termcolor = "^2.4.0"
+simplejson = "^3.19.2"
+tqdm = "^4.66.2"
+psutil = "^5.9.8"
+opencv-python = "^4.9.0.80"
+pyyaml = "^6.0.1"
+pillow = "^10.2.0"
+scikit-learn = "^1.4.1.post1"
+fairscale = "^0.4.13"
+slowfast = {path = "src/slowfast", develop = true}
+iopath = "^0.1.10"
+fvcore = "^0.1.5.post20221221"
+pytorchvideo = {git = "https://github.com/facebookresearch/pytorchvideo.git", rev = "eb04d1b"}
 
 [tool.black]
 line-length = 79
