Switch from YOLOv5 to YOLOv8.

--- a/conf/base/catalog.yml
+++ b/conf/base/catalog.yml
@@ -27,6 +27,11 @@ yolov5_l_description:
   type: yaml.YAMLDataSet
   filepath: data/01_raw/yolov5_l.yml
 
+# Description of the YOLOv8-L model.
+yolov8_l_description:
+  type: yaml.YAMLDataSet
+  filepath: data/01_raw/yolov8_l.yml
+
 # Initial, untrained model
 initial_model:
   type: MemoryDataSet
