--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,9 +24,10 @@ torchvision = "^0.14.1"
 methodtools = "^0.4.5"
 wandb = "^0.13.9"
 torchmetrics = "^0.11.0"
-yolov5 = "^7.0.8"
 scikit-learn = "^1.2.1"
 segment-anything = {git = "https://github.com/facebookresearch/segment-anything.git"}
+ultralytics = "^8.1.24"
+pyyaml = "6"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
@@ -38,7 +39,6 @@ pre-commit = "^2.11.0"
 pytest-snapshot = "^0.5.0"
 Faker = "^6.6.2"
 pytest-coverage = "^0.0"
-PyYAML = "^5.4.1"
 pytest-flake8 = "^1.0.7"
 pydot = "^1.4.2"
 jupyterlab = "^3.4.2"
