Clean up the parameter handling a little.

--- a/conf/base/parameters/train_simclr.yml
+++ b/conf/base/parameters/train_simclr.yml
@@ -2,3 +2,9 @@
 temperature: 0.1
 # Amount of temporal jitter to apply to frame selections.
 max_frame_jitter: 0
+# Whether to enable multi-camera training. Otherwise, it will use
+# vanilla SimCLR.
+enable_multi_view: true
+# If multi-view training is enabled, how many views to use. If >3,
+# it will use temporal augmentation.
+num_views: 4
