--- a/conf/base/parameters/train_simclr.yml
+++ b/conf/base/parameters/train_simclr.yml
@@ -4,7 +4,7 @@ temperature: 0.1
 max_frame_jitter: 0
 # Whether to enable multi-camera training. Otherwise, it will use
 # vanilla SimCLR.
-enable_multi_view: false
+enable_multi_view: true
 # If multi-view training is enabled, how many views to use. If >3,
 # it will use temporal augmentation.
 num_views: 2
