--- a/conf/base/catalog.yml
+++ b/conf/base/catalog.yml
@@ -30,7 +30,7 @@ yolov5_l_description:
 # Description of the YOLOv8-L model.
 yolov8_l_description:
   type: yaml.YAMLDataSet
-  filepath: data/01_raw/yolov8_l.yml
+  filepath: data/01_raw/yolov8l.yml
 
 # Initial, untrained model
 initial_model:
