--- a/conf/base/parameters/representation_model.yml
+++ b/conf/base/parameters/representation_model.yml
@@ -12,3 +12,6 @@ temperature: 0.07
 
 # Whether to use MoCo. Otherwise, will use normal SimCLR.
 use_moco: true
+# Whether to use contrastive crop. Otherwise, it will use normal random
+# cropping.
+contrastive_crop: false
